--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <i class="fas fa-building"></i> Şirket Sitesi
       </a>
     </div>
+    <footer class="site-footer">
+  <div class="footer-content">
+    <p>© 2025 Onat Dibo. Tüm hakları saklıdır.</p>
+  </div>
+</footer>
   </div>
 </body>
 </html>
