--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <i class="fas fa-tv"></i> Kick
       </a>
       <a href="https://thynext.com" target="_blank" rel="noopener noreferrer" class="company">
-        <i class="fas fa-building"></i> Şirket Sitesi
+        <i class="fas fa-building"></i> ThyNext
       </a>
     </div>
     <footer class="site-footer">
