added favicon and edited directorys

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="img/favicon.png" class="favicon-img">
   <title>Onat Dibo</title>
   <!-- FontAwesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -10,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="assets/img/profile.jpg" alt="Profil Resmi" class="profile-img" />
+    <img src="img/profile.jpg" alt="Profil Resmi" class="profile-img" />
 
     <h1>Onat Dibo</h1>
     <p class="description">Bilgisayar Teknolojileri mezunu, Cisco onaylı Siber Güvenlik sertifikasına sahip. Sürekli öğrenme motivasyonu yüksek, sektördeki gelişmeleri yakından takip eden ve yenilikçi çözümler üretmeye odaklanan bir teknoloji profesyoneli.</p>
