--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Kişisel bilgilerim ve sosyal medya hesaplarıma kolayca ulaşabileceğiniz resmi sayfa">
   <link rel="icon" type="image/x-icon" href="img/favicon.png" class="favicon-img">
   <title>Onat Dibo</title>
   <!-- FontAwesome CDN -->
