--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <a href="https://kick.com/" target="_blank" rel="noopener noreferrer" class="kick">
         <i class="fas fa-tv"></i> Kick
       </a>
-      <a href="https://thynext.com" target="_blank" rel="noopener noreferrer" class="company">
-        <i class="fas fa-building"></i> ThyNext
-      </a>
+<a href="mailto:info@onatdibo.com" target="_blank" rel="noopener noreferrer" class="sendmail">
+  <i class="fas fa-envelope"></i> Email Gönder
+</a>
     </div>
     <footer class="site-footer">
   <div class="footer-content">
