--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="https://www.instagram.com/_onatd" target="_blank" rel="noopener noreferrer" class="instagram">
         <i class="fab fa-instagram"></i> Instagram
       </a>
-      <a href="https://kick.com/" target="_blank" rel="noopener noreferrer" class="kick">
+      <a href="https://kick.com/zealmight" target="_blank" rel="noopener noreferrer" class="kick">
         <i class="fas fa-tv"></i> Kick
       </a>
 <a href="mailto:info@onatdibo.com" target="_blank" rel="noopener noreferrer" class="sendmail">
