--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <a href="https://www.instagram.com/_onatd" target="_blank" rel="noopener noreferrer" class="instagram">
         <i class="fab fa-instagram"></i> Instagram
       </a>
-      <a href="https://thynext.com" target="_blank" rel="noopener noreferrer" class="kick">
-        <i class="fas fa-tv"></i> ThyNext
+      <a href="https://kick.com/zealmight" target="_blank" rel="noopener noreferrer" class="kick">
+        <i class="fas fa-tv"></i> Kick
       </a>
 <a href="mailto:info@onatdibo.com" target="_blank" rel="noopener noreferrer" class="sendmail">
   <i class="fas fa-envelope"></i> Email Gönder
