--- a/index.html
+++ b/index.html
@@ -1,40 +1,110 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Kişisel bilgilerim ve sosyal medya hesaplarıma kolayca ulaşabileceğiniz resmi sayfa">
-  <link rel="icon" type="image/x-icon" href="img/favicon.png" class="favicon-img">
-  <title>Onat Dibo</title>
-  <!-- FontAwesome CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-</head>
-<body>
-  <div class="container">
-    <img src="img/profile.jpg" alt="Profil Resmi" class="profile-img" />
 
-    <h1>Onat Dibo</h1>
-    <p class="description">Bilgisayar Teknolojileri mezunu, Cisco onaylı Siber Güvenlik sertifikasına sahip. Sürekli öğrenme motivasyonu yüksek, sektördeki gelişmeleri yakından takip eden ve yenilikçi çözümler üretmeye odaklanan bir teknoloji profesyoneli.</p>
-    <div class="links">
-      <a href="https://www.linkedin.com/in/onatdibo" target="_blank" rel="noopener noreferrer" class="linkedin">
-        <i class="fab fa-linkedin-in"></i> LinkedIn
-      </a>
-      <a href="https://www.instagram.com/_onatd" target="_blank" rel="noopener noreferrer" class="instagram">
-        <i class="fab fa-instagram"></i> Instagram
-      </a>
-      <a href="https://kick.com/zealmight" target="_blank" rel="noopener noreferrer" class="kick">
-        <i class="fas fa-tv"></i> Kick
-      </a>
-<a href="mailto:info@onatdibo.com" target="_blank" rel="noopener noreferrer" class="sendmail">
-  <i class="fas fa-envelope"></i> Email Gönder
-</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Onat Dibo | Hakkımda</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+    <button class="theme-toggle" id="themeToggle" aria-label="Tema Değiştir">
+        🌙 <!-- Dark mode: 🌙 | Light mode: 🌞 (otomatik değişir) -->
+    </button>
+
+    <div class="container">
+        <div class="profile-section">
+            <!-- Profil resmi ikonu - Değiştirilebilir: 👤, 👨, 👩, 🧑, 😊, 🎭, 🎨, 💼 vb. -->
+            <div class="profile-image">
+                <img src="img/profile.jpg" alt="Profil Resmi"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+            </div>
+            <h1 class="profile-name">Onat Dibo</h1>
+            <p class="profile-bio">Cyber Security | Network</p>
+        </div>
+
+        <div class="links-section">
+            <!-- Link 1 - Website -->
+            <!-- İkonu değiştirmek için emoji'yi değiştirin: 🌐, 💻, 🖥️, 🌍, 🏠 vb. -->
+            <a href="https://onatdibo.com" class="link-item">
+                <div class="link-content">
+                    <div class="link-icon">🌐</div>
+                    <span class="link-text">Website</span>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+
+            <!-- Link 2 - Instagram -->
+            <!-- İkonu değiştirmek için: 📸, 📷, IG, 💜 vb. -->
+            <a href="https://instagram.com/_onatd" class="link-item">
+                <div class="link-content">
+                    <div class="link-icon">📸</div>
+                    <span class="link-text">Instagram</span>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+
+            <!-- Link 3 - YouTube -->
+            <!-- İkonu değiştirmek için: 🎥, 📹, YT, ▶️, 🎬 vb. -->
+            <a href="#" class="link-item">
+                <div class="link-content">
+                    <div class="link-icon">🎥</div>
+                    <span class="link-text">YouTube</span>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+
+            <!-- Link 4 - LinkedIn -->
+            <!-- İkonu değiştirmek için: 💼, 👔, LI, 🤝, 💻 vb. -->
+            <a href="https://linkedin.com/in/onatdibo" class="link-item">
+                <div class="link-content">
+                    <div class="link-icon">💼</div>
+                    <span class="link-text">LinkedIn</span>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+
+            <!-- Link 5 - İletişim -->
+            <!-- İkonu değiştirmek için: 📧, ✉️, 💌, 📬, 📮 vb. -->
+            <a href="mailto:info@onatdibo.com" class="link-item">
+                <div class="link-content">
+                    <div class="link-icon">📧</div>
+                    <span class="link-text">İletişim</span>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+
+            <!-- 
+            YENİ LINK EKLEMEK İÇİN:
+            Aşağıdaki kodu kopyalayıp yukarıya ekleyin ve içeriği değiştirin:
+            
+            <a href="#" class="link-item">
+                <div class="link-content">
+                    <div class="link-icon">🎵</div>
+                    <span class="link-text">Spotify</span>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+            
+            DİĞER POPÜLER İKONLAR:
+            🎵 Spotify/Müzik    🎮 Oyun/Twitch      📱 Uygulama
+            🛒 Shop/Mağaza      📝 Blog/Yazı        🎨 Portfolio
+            💬 Discord          📞 Telefon          🌟 Favoriler
+            🔗 Diğer Linkler    ⭐ Öne Çıkanlar    🎁 Hediye
+            -->
+        </div>
     </div>
-    <footer class="site-footer">
-  <div class="footer-content">
-    <p>© 2025 Onat Dibo. Tüm hakları saklıdır.</p>
-  </div>
-</footer>
-  </div>
+
+    <footer>
+        <div class="footer-content">
+            <p class="footer-text">Made with ❤️ by Onat Dibo</p>
+            <p class="footer-text" style="margin-top: 8px; font-size: 12px; opacity: 0.7;">© 2025 Tüm hakları saklıdır
+            </p>
+        </div>
+    </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
