--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="tr">
 
 <head>
@@ -27,7 +27,7 @@
         <div class="links-section">
             <!-- Link 1 - Website -->
             <!-- İkonu değiştirmek için emoji'yi değiştirin: 🌐, 💻, 🖥️, 🌍, 🏠 vb. -->
-            <a href="https://onatdibo.com" class="link-item">
+            <a href="https://onatdibo.com" class="link-item" target="_blank">
                 <div class="link-content">
                     <div class="link-icon">🌐</div>
                     <span class="link-text">Website</span>
@@ -37,7 +37,7 @@
 
             <!-- Link 2 - Instagram -->
             <!-- İkonu değiştirmek için: 📸, 📷, IG, 💜 vb. -->
-            <a href="https://instagram.com/_onatd" class="link-item">
+            <a href="https://instagram.com/_onatd" class="link-item" target="_blank">
                 <div class="link-content">
                     <div class="link-icon">📸</div>
                     <span class="link-text">Instagram</span>
@@ -47,7 +47,7 @@
 
             <!-- Link 3 - YouTube -->
             <!-- İkonu değiştirmek için: 🎥, 📹, YT, ▶️, 🎬 vb. -->
-            <a href="#" class="link-item">
+            <a href="#" class="link-item" target="_blank">
                 <div class="link-content">
                     <div class="link-icon">🎥</div>
                     <span class="link-text">YouTube</span>
@@ -57,7 +57,7 @@
 
             <!-- Link 4 - LinkedIn -->
             <!-- İkonu değiştirmek için: 💼, 👔, LI, 🤝, 💻 vb. -->
-            <a href="https://linkedin.com/in/onatdibo" class="link-item">
+            <a href="https://linkedin.com/in/onatdibo" class="link-item" target="_blank">
                 <div class="link-content">
                     <div class="link-icon">💼</div>
                     <span class="link-text">LinkedIn</span>
@@ -67,7 +67,7 @@
 
             <!-- Link 5 - İletişim -->
             <!-- İkonu değiştirmek için: 📧, ✉️, 💌, 📬, 📮 vb. -->
-            <a href="mailto:info@onatdibo.com" class="link-item">
+            <a href="mailto:info@onatdibo.com" class="link-item" target="_blank">
                 <div class="link-content">
                     <div class="link-icon">📧</div>
                     <span class="link-text">İletişim</span>
