--- a/index.html
+++ b/index.html
@@ -25,17 +25,8 @@
         </div>
 
         <div class="links-section">
-            <!-- Link 1 - Website -->
-            <!-- İkonu değiştirmek için emoji'yi değiştirin: 🌐, 💻, 🖥️, 🌍, 🏠 vb. -->
-            <a href="https://onatdibo.com" class="link-item" target="_blank">
-                <div class="link-content">
-                    <div class="link-icon">🌐</div>
-                    <span class="link-text">Website</span>
-                </div>
-                <span class="link-arrow">→</span>
-            </a>
 
-            <!-- Link 2 - Instagram -->
+            <!-- Link 1 - Instagram -->
             <!-- İkonu değiştirmek için: 📸, 📷, IG, 💜 vb. -->
             <a href="https://instagram.com/_onatd" class="link-item" target="_blank">
                 <div class="link-content">
@@ -45,17 +36,17 @@
                 <span class="link-arrow">→</span>
             </a>
 
-            <!-- Link 3 - YouTube -->
+            <!-- Link 2 - YouTube -->
             <!-- İkonu değiştirmek için: 🎥, 📹, YT, ▶️, 🎬 vb. -->
-            <a href="#" class="link-item" target="_blank">
+            <a href="https://github.com/zealmight" class="link-item" target="_blank">
                 <div class="link-content">
-                    <div class="link-icon">🎥</div>
-                    <span class="link-text">YouTube</span>
+                    <div class="link-icon">📁</div>
+                    <span class="link-text">Github</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
 
-            <!-- Link 4 - LinkedIn -->
+            <!-- Link 3 - LinkedIn -->
             <!-- İkonu değiştirmek için: 💼, 👔, LI, 🤝, 💻 vb. -->
             <a href="https://linkedin.com/in/onatdibo" class="link-item" target="_blank">
                 <div class="link-content">
@@ -65,7 +56,7 @@
                 <span class="link-arrow">→</span>
             </a>
 
-            <!-- Link 5 - İletişim -->
+            <!-- Link 4 - İletişim -->
             <!-- İkonu değiştirmek için: 📧, ✉️, 💌, 📬, 📮 vb. -->
             <a href="mailto:info@onatdibo.com" class="link-item" target="_blank">
                 <div class="link-content">
