--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Onat Dibo">
+    <meta property="og:description" content="Kişisel web sitem — Sosyal Medya bağlantılarım ve daha fazlası.">
+    <meta property="og:image" content="https://onatdibo.com/img/profile.jpg">
+    <meta property="og:url" content="https://onatdibo.com/">
+    <meta property="og:type" content="website">
     <title>Onat Dibo</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
