--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="https://onatdibo.com/img/profile.jpg">
     <meta property="og:url" content="https://onatdibo.com/">
     <meta property="og:type" content="website">
+    <link rel="icon" href="img/favicon.png">
     <title>Onat Dibo</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
