--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Onat Dibo</title>
+    <title>Onat Dibo | Hakkımda</title>
 </head>
 
 <body>
