--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Onat Dibo">
-    <meta property="og:description" content="Bağlantılar">
+    <meta property="og:title" content="Onat Dibo | Hakkımda">
+    <meta property="og:description" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz."
     <meta property="og:type" content="website">
     <link rel="icon" href="img/favicon.png">
+    <meta property="og:image" content="img/profile.jpg">
+    <meta property="og:url" content="https://onatdibo.com">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Onat Dibo | Hakkımda</title>
 </head>
