--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Onat Dibo | Hakkımda">
     <meta property="og:description" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz."
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz.">
     <link rel="icon" href="img/favicon.png">
     <meta property="og:image" content="img/profile.jpg">
     <meta property="og:url" content="https://onatdibo.com">
