added language buttons

--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Onat Dibo | Hakkımda">
-    <meta property="og:description" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz."
-    <meta property="og:type" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz.">
+    <meta property="og:title" content="Onat Dibo | Hakkımda" data-tr="Onat Dibo | Hakkımda" data-en="Onat Dibo | About Me">
+    <meta property="og:description" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-tr="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-en="You can access my social media accounts and contact information here."
+    <meta property="og:type" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-tr="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-en="You can access my social media accounts and contact information here.">
     <link rel="icon" href="img/favicon.png">
     <meta property="og:image" content="img/profile.jpg">
     <meta property="og:url" content="https://onatdibo.com">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Onat Dibo | Hakkımda</title>
+    <title data-tr="Onat Dibo | Hakkımda" data-en="Onat Dibo | About Me">Onat Dibo | Hakkımda</title>
 </head>
 
 <body>
     <button class="theme-btn" id="themeBtn" aria-label="Tema">🌙</button>
+    
+    <div class="language-switcher">
+        <button class="lang-btn active" id="trBtn" data-lang="tr">TR</button>
+        <button class="lang-btn" id="enBtn" data-lang="en">EN</button>
+    </div>
 
     <div class="wrapper">
         <div class="header">
             <img src="img/profile.jpg" alt="Onat Dibo" class="avatar">
             <div class="name">Onat Dibo</div>
-            <div class="bio">Cyber Security | Network</div>
-            <div class="description">Bilgisayar Teknolojileri mezunu, Cisco onaylı Siber Güvenlik sertifikasına sahip. Sürekli öğrenme motivasyonu yüksek, sektördeki gelişmeleri yakından takip eden ve yenilikçi çözümler üretmeye odaklanan bir teknoloji profesyoneli.</div>
+            <div class="bio" data-tr="Siber Güvenlik | Ağ" data-en="Cyber Security | Network">Siber Güvenlik | Ağ</div>
+            <div class="description" data-tr="Bilgisayar Teknolojileri mezunu, Cisco onaylı Siber Güvenlik sertifikasına sahip. Sürekli öğrenme motivasyonu yüksek, sektördeki gelişmeleri yakından takip eden ve yenilikçi çözümler üretmeye odaklanan bir teknoloji profesyoneli." data-en="Computer Technologies graduate with Cisco certified Cyber Security certification. A technology professional with high continuous learning motivation, closely following industry developments and focused on producing innovative solutions.">Bilgisayar Teknolojileri mezunu, Cisco onaylı Siber Güvenlik sertifikasına sahip. Sürekli öğrenme motivasyonu yüksek, sektördeki gelişmeleri yakından takip eden ve yenilikçi çözümler üretmeye odaklanan bir teknoloji profesyoneli.</div>
         </div>
 
         <div class="links">
@@ -53,7 +58,7 @@
             <a href="mailto:info@onatdibo.com" class="link">
                 <div class="link-left">
                     <i data-lucide="mail" class="link-icon"></i>
-                    <span>E-posta</span>
+                    <span data-tr="E-Posta Gönder" data-en="Send Email">E-Posta Gönder</span>
                 </div>
                 <i data-lucide="arrow-right" class="link-arrow"></i>
             </a>
@@ -61,14 +66,22 @@
             <a href="https://kick.com/zealmight" target="_blank" rel="noopener noreferrer" class="link">
                 <div class="link-left">
                     <i data-lucide="tv" class="link-icon"></i>
-                    <span>Kick Stream</span>
+                    <span>Kick</span>
+                </div>
+                <i data-lucide="arrow-right" class="link-arrow"></i>
+            </a>
+
+            <a href="https://youtube.com/@onatdibo" target="_blank" rel="noopener noreferrer" class="link">
+                <div class="link-left">
+                    <i data-lucide="youtube" class="link-icon"></i>
+                    <span>YouTube</span>
                 </div>
                 <i data-lucide="arrow-right" class="link-arrow"></i>
             </a>
         </div>
 
         <div class="footer">
-            © 2025 Onat Dibo. 🥷 Tüm hakları saklıdır.
+            <span data-tr=" 2025 Onat Dibo. 🥷 Tüm hakları saklıdır." data-en=" 2025 Onat Dibo. 🥷 All rights reserved."> 2025 Onat Dibo. 🥷 Tüm hakları saklıdır.</span>
         </div>
     </div>
 
