added partical effect

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <button class="theme-btn" id="themeBtn" aria-label="Tema">🌙</button>
     
     <div class="language-switcher">
