--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="links">
-            <a href="https://instagram.com/_onatd" target="_blank" rel="noopener noreferrer" class="link">
+            <a href="https://instagram.com/onat_dibo" target="_blank" rel="noopener noreferrer" class="link">
                 <div class="link-left">
                     <i data-lucide="instagram" class="link-icon"></i>
                     <span>Instagram</span>
