--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Onat Dibo | Hakkımda" data-tr="Onat Dibo | Hakkımda" data-en="Onat Dibo | About Me">
-    <meta property="og:description" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-tr="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-en="You can access my social media accounts and contact information here."
-    <meta property="og:type" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-tr="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-en="You can access my social media accounts and contact information here.">
+    <meta property="og:description" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-tr="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-en="You can access my social media accounts and contact information here.">
+    <meta property="og:type" content="profile">
     <link rel="icon" href="img/favicon.png">
     <meta property="og:image" content="img/profile.jpg">
     <meta property="og:url" content="https://onatdibo.com">
