--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://unpkg.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self'; frame-ancestors 'none';">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta property="og:title" content="Onat Dibo | Hakkımda" data-tr="Onat Dibo | Hakkımda" data-en="Onat Dibo | About Me">
     <meta property="og:description" content="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-tr="Sosyal medya hesapları ve iletişim bilgilerime buradan ulaşabilirsiniz." data-en="You can access my social media accounts and contact information here.">
     <meta property="og:type" content="profile">
